# intentflow

./: .codex  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  README_MinimalDemo.md  environment.yml  pyproject.toml  run_analysis_only.sh  run_hybrid_experiment.sh  run_strategies.sh  setup_production.sh  simulate_neuro_conservative_gating.py  simulate_phase7.py
.claude/: CLAUDE.md  settings.json
.claude/memory/: MEMORY.md  active-questions.md  project-overview.md  working-conventions.md
.claude/rules/: experiments.md  papers.md  python.md  safety.md
.claude/templates/: seminar-visualization-checklist.md
Assets/Scenes/: Runner3Lane_Keyboard.unity  Runner3Lane_MI.unity
apps/unity_client/: .gitignore  README_BCI_Runner.md
configs/: adapt.yaml  data.yaml  offline.yaml  online.yaml  ports.yaml  preprocess.yaml
dashboards/: app.py
deployment/ci/: github-actions.yml
deployment/docker/: Dockerfile.offline  Dockerfile.online
docs/: CALIBRATION.md  DESIGN.md  PROTOCOL.md  REALTIME_UNICORN_SETUP.md  ablation_analysis_report.md  seminar_analysis.md
docs/related_research/: README.md
intentflow/: __init__.py
scripts/: README.md  bench_latency.py  calibrate.py  export_unity_input.py  gen_intents_demo.py  make_dummy_mi_npz.py  plot_bcic2b_comparison.py  replay_intents_to_control.py  replay_npz_to_ingest.py  run_ablation_experiments.sh  run_bcic2b_hybrid_only.sh  seminar_figures.py  simulate.py
tests/: test_adapt.py  test_eegencoder_shape.py  test_filters.py  test_ingest_pipeline.py  test_models_and_flow.py  test_runner.py  test_ws_protocol.py
(+2834 files in other folders)
